2006-06-12  Srinivasa Ragavan  <sragavan@novell.com>

	* message-list.etspec: Corrected the sortable parameter of the message
	list correctly.

2006-06-29  Chris Heath <chris@heathens.co.nz>

	* message-list.c (message_list_finalise): Fix memory leak.
	Fixes bug #335423.

2006-06-07  Srinivasa Ragavan  <sragavan@novell.com>

	* em-format-html.c: (efh_format_address): Fixed a minor bug, where the
	plus symbol appears if the limit equals the address shown.

2006-06-06  Harish Krishnaswamy  <kharish@novell.com>

	* evolution-mail.schemas.in.in: typo correction.
	Fixes #331694.

2006-06-02  Jeffrey Stedfast  <fejj@novell.com>

	* em-folder-view.c (emfv_setup_view_instance): Can't make camel
	calls from the main thread or we run the risk of deadlocking.

2006-06-02  Srinivasa Ragavan  <sragavan@novell.com>

	** Added support for Vertical View in evolution in addition to the
	existing classical view. It also supports a composite headers to be
	shown in a multilined column.

	* em-folder-browser.c (emfb_pane_realised),
	(emfb_pane_button_release_event, emfb_init),
	(em_folder_browser_show_preview, em_folder_browser_show_wide),
	(emfb_show_next, emfb_show_below, emfb_activate): Added code to
	handle the new wide mode in Evolution.

	* em-folder-view.c (emfv_setup_view_instance),
	(em_folder_view_setup_view_instance): Added code to handle the
	default view in the wide mode for normal and sent/draft folders.

	* evolution-mail.schemas.in.in: Added schema for hpane size,
	showing email in the composite headers and toggling wide more.
	
	* message-list.c (ml_duplicate_value, ml_free_value),
	(ml_initialize_value, ml_value_is_empty, ml_value_to_string),
	(sanitize_recipients, ml_tree_value_at, create_composite_cell),
	(message_list_create_extras): Added a new composite header
	render_composite_from/recipient which shows the headers in a
	multilined column.

	* message-list.etspec: Added three new columns, Recipent, Messages