@@ -1,3 +1,8 @@
+2006-06-13  Tor Lillqvist  <tml@novell.com>
+
+	* em-format-html.c (efh_format_address): Fix build on Win32, where
+	EVOLUTION_ICONSDIR is a function call.
+
 2006-06-12  Srinivasa Ragavan  <sragavan@novell.com>
 
 	* message-list.etspec: Corrected the sortable parameter of the message
